Added EFCore Framework and EFCore Tools to project. Created and wired up DbContext. Created DbSeeder class. Added mech and category repos to use DbContext. Ran the initial migration.

--- a/MMMBuilds/appsettings.json
+++ b/MMMBuilds/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": { "MMMBuildsDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=MMMBuilds01;Trusted_Connection=True;MultipleActiveResultSets=true" }
 }
